# oshmpi

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES  COPYRIGHT  LICENSE  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  barrier_performance.c  bmalloc.c  configure.ac  etext.c  get_performance.c  hello.c  lat_bw.c  mac_sections.c  mcs-lock.c  mcs-lock.h  osu_oshm_put_mr.c  put_performance.c  shmem-internals.c  shmem-internals.h  shmem-wait.h  shmem.c  shmem.h  test_etext.c  test_sheap.c
.github/workflows/: CI.yml
confdb/: VERSION
docs/: intel-mic
env/: Makefile.mk  oshc++.in  oshcc.in
include/: Makefile.mk  shmem.h.in  shmem.h.in.tpl  shmem_amo_bitws_typed.h.tpl  shmem_amo_ext_typed.h.tpl  shmem_amo_std_typed.h.tpl  shmem_coll_typed.h.tpl  shmem_p2p_typed.h.tpl  shmem_reduce_bitws_aset_typed.h.tpl  shmem_reduce_bitws_team_typed.h.tpl  shmem_reduce_bitws_typed.h.tpl  shmem_reduce_minmax_aset_typed.h.tpl  shmem_reduce_minmax_team_typed.h.tpl  shmem_reduce_minmax_typed.h.tpl  shmem_reduce_sumprod_aset_typed.h.tpl  shmem_reduce_sumprod_team_typed.h.tpl  shmem_reduce_sumprod_typed.h.tpl  shmem_rma_sized.h.tpl  shmem_rma_typed.h.tpl  shmem_signal_sized.h.tpl  shmem_signal_typed.h.tpl  shmemx.fh.in  shmemx.h.in
maint/: amo_bitws_typedef.txt  amo_ext_typedef.txt  amo_std_typedef.txt  build_sized_api.pl  build_typed_api.pl  code-cleanup.sh  copyright.bash  install-autotools.sh  install-mpi.sh  p2p_typedef.txt  reduce_bitws_team_typedef.txt  reduce_bitws_typedef.txt  reduce_minmax_aset_typedef.txt  reduce_minmax_team_typedef.txt  reduce_sumprod_aset_typedef.txt  reduce_sumprod_team_typedef.txt  reduce_sumprod_typedef.txt  release.pl  rma_sizedef.txt  rma_typedef.txt  signal_typedef.txt  version.m4
maint/hooks/: whitespace_checker
overhead_test/mpi/: Makefile  osu_mpi_put_mr.c
overhead_test/shmem/: Makefile  osu_common.h  osu_oshm_put_mr.c
portals-shmem-src/: Makefile  accessibility_c.c  atomic_c.c  atomic_f.c  cache_management_c.c  cache_management_f.c  collectives_c.c  collectives_f.c  data_c.c  data_f.c  init.c  lock_c.c  lock_f.c  malloc.diff  query_c.c  remote_pointer_c.c  shmem_collectives.h  shmem_comm.h  shmem_synchronization.h  symmetric_heap_c.c  synchronization_c.c  synchronization_f.c  transport_mpi3.c  transport_mpi3.h
src/: Makefile  Makefile.mk  bmalloc.c  compiler-utils.h  dlmalloc.c  lock.c  lock.h  mcs-lock.c  oshcompiler.in  oshmpi-mcs-lock.c  oshmpi-mcs-lock.h  shmem-internals.c  shmem-internals.h  shmem-wait.h  shmem.c  shmem.h  shmem.h.in  shmemconf.h.in  shmemx-armci-strided.c  shmemx-counting-put.c  shmemx.h  type_contiguous_x.h
src/include/: Makefile.mk  oshmpi_impl.h  oshmpi_util.h
src/internal/: Makefile.mk  am_impl.c  am_impl.h  am_pkt.h  am_pkt_def.h  am_pre.h  am_progress_impl.h  amo_am_cb.c  amo_am_impl.c  amo_am_impl.h  amo_direct_impl.h  amo_impl.h  amo_init.c  coll_activeset_impl.h  coll_impl.c  coll_impl.h  coll_init.c  common.c  ctx_impl.c  lock_impl.h  mem_impl.c  mem_impl.h  order_impl.h  p2p_impl.h  rma_am_cb.c  rma_am_impl.c  rma_am_impl.h  rma_impl.h  setup.c  setup_impl.c  space_impl.c  strided_impl.c  strided_impl.h  strided_init.c  team_impl.c
src/internal/util/: Makefile.mk  dlmalloc.c  dlmalloc.h  mem_pool.c  mempool.h  symm_mem.c  thread.h  utlist.h
src/internal/util/gpu/: cuda.h  fallback.c  ze.c  ze.h
src/shmem/: Makefile.mk  amo_bitws_typed.c.tpl  amo_ext_typed.c.tpl  amo_std_typed.c.tpl  cache.c  coll.c  coll_activeset.c  coll_typed.c.tpl  context.c  lock.c  mem.c  order.c  p2p.c  p2p_typed.c.tpl  profile.c  reduce_bitws_aset_typed.c.tpl  reduce_bitws_team_typed.c.tpl  reduce_bitws_typed.c.tpl  reduce_minmax_aset_typed.c.tpl  reduce_minmax_team_typed.c.tpl  reduce_minmax_typed.c.tpl  reduce_sumprod_aset_typed.c.tpl  reduce_sumprod_team_typed.c.tpl  reduce_sumprod_typed.c.tpl  rma.c  rma_sized.c.tpl  rma_sized.tpl  rma_typed.c.tpl  rma_typed.tpl  setup.c  signal.c  signal_sized.c.tpl  signal_typed.c.tpl  team.c
src/shmemx/: Makefile.mk  mem.c  setup.c  space.c  util.c
tests/: .gitignore  Makefile  Makefile.am  Makefile.mk  amo_set_fetch.c  amo_set_wait_until.c  barrier.c  barrier_performance.c  bcast_flood.c  bigget.c  configure.ac  get_performance.c  gpu_common.c  gpu_common.h  hello.c  int_amo.c  int_put.c  ipgm.c  iput.c  iput_quiet.c  lat_bw.c  likely_macro.c  mac_sections.c  matvec.c  msgrate.c  osu_oshm_atomics.c  osu_oshm_put_mr.c  ptp.c  put_performance.c  putmem_quiet.c  set_lock.c  shmem_heat_image.c  shmemlatency.c  shrealloc.c  space.c  space_ctx_int_put.c  space_int_amo.c  space_int_put.c  stream.c  stream_omp.c  (+17 more)
tests/devel/: win_alloc_shared.c
tests/extensions/aput/: BUG  Makefile  armci-strided.c  dmapp-strided.c
tests/hybrid_mpi/: Makefile.mk  init.c  mapping_id.c  mapping_id_shmem_comm.c  query_mpi_progress.c  threaded.c
tests/overhead/mpi/: Makefile  osu_common.c
travis/: build-run.sh  install-autotools.sh  install-mpi.sh
