#
# Copyright (C) 2018. See COPYRIGHT in top-level directory.
#

ACLOCAL_AMFLAGS = -I confdb
AM_CPPFLAGS =

lib_LTLIBRARIES = liboshmpi.la
include_HEADERS = include/shmem.h
bin_SCRIPTS =
CLEANFILES =

noinst_HEADERS =
liboshmpi_la_SOURCES =
liboshmpi_la_LDFLAGS =
liboshmpi_la_LIBADD = 
EXTRA_liboshmpi_la_DEPENDENCIES = 

include src/Makefile.mk
include env/Makefile.mk

EXTRA_DIST = CHANGES COPYRIGHT maint autogen.sh